tests/ui/pattern/patkind-ref-binding-issue-122415.stderr
error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/patkind-ref-binding-issue-122415.rs:7:12
   |
LL |     mutate(&mut x);
   |            ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL | fn foo(&(mut x): &i32) {
   |         ++++  +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
